fixed side menu bar misalignment and added videos for the video section

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,19 +22,9 @@
 	--font-micro: 1rem;
 }
 
-/*/ ////////////// Main-section /////////////// */
-/* ////////////////////////////////////////////////// */
-/* ////////////////////////////////////////////////// */
-.main-section {
-	margin: var(--padding);
-}
-
 /* /////////// The header has been placed in General Css //// */
 
 /* //////////////// Menus //////////////////////// */
-/* .menus {
-	display: flex;
-} */
 
 /* //////////////// Side menu //////////////////////// */
 /* ////////////////////////////////////////////////// */
@@ -51,10 +41,8 @@
 	width: 100%;
 	height: 100vh;
 	display: flex;
-	justify-content: center;
 	position: fixed;
 	left: -100%;
-	/* left: 0%; */
 	padding-top: 2rem;
 }
 
@@ -89,7 +77,7 @@
 	display: flex;
 	align-items: center;
 	gap: 1.8rem;
-	padding: 0.85rem 0rem 0.85rem 2.7rem;
+	padding: 0.85rem 0rem 0.85rem 2.4rem;
 	/* margin-bottom: 1.8rem; */
 }
 
